--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
 
   "content_scripts": [
     {
-      "matches": ["https://trello.com/*/cards"],
+      "matches": ["https://trello.com/*"],
       "js": ["jquery-1.11.3.min.js", "script.js"]
     }
   ],
