--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   "content_scripts": [
     {
       "matches": ["https://trello.com/*"],
-      "js": ["jquery-1.11.3.min.js", "script.js"]
+      "js": ["js/jquery-1.11.3.min.js","js/sortable.min.js", "js/script.js", "js/options.js"]
     }
   ],
 
